# ai-accelerator-tool

./: .gitignore  .gitmodules  Makefile  README.md  go.mod  go.sum
cmd/ai-accelerator-tool/: main.go
cmd/ai-accelerator-tool/app/: diagnose.go  mock.go  root.go  version.go
hack/: gpu_mock_conf.toml
lib/: CMakeLists.txt  README.md
lib/so_injection/: CMakeLists.txt  inject_helper.cpp
lib/so_injection/nvml/: injection.cpp
lib/src/dev_mgr_hijack/: CMakeLists.txt  inject_helper.cpp
lib/src/dev_mgr_hijack/common/: common.hpp
lib/src/dev_mgr_hijack/dcmi/: injection.cpp  injection.hpp
lib/src/dev_mgr_hijack/nvml/: injection.hpp
pkg/diagnose/: controller.go  controller_test.go  interface.go  nvidia.go  nvidia_test.go
pkg/mock/: controller.go  controller_test.go
pkg/mock/resources/: resources.go
pkg/utils/: env.go  errors.go  exec.go  exec_test.go  mock.go  utils.go  utils_test.go
